<resources>
    <string name="app_name">PickPoint</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_image_app">Aplicativo Pick Pointer</string>
    <string name="edit_timer">00:00</string>
    <string name="cd_time_to_pick_point">Horário que você irá marcar o ponto</string>
    <string name="cd_btn_pick_point">Finalizar o processo de marcação de ponto</string>
    <string name="entrance">Entrada</string>
    <string name="lunch">Almoço</string>
    <string name="exit">Saída</string>
</resources>