<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    tools:context=".PickPointFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pickpoint"
        app:layout_constraintBottom_toTopOf="@+id/txt_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/cd_image_app"
        />
    <TextView
        android:id="@+id/txt_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_timer"
        android:textSize="42sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"
        android:contentDescription="@string/cd_time_to_pick_point"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/txt_timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true"
        >

        <CheckBox
            android:id="@+id/checkbox_entrance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrance"
            android:textSize="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/entrance" />

        <CheckBox
            android:id="@+id/checkbox_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunch"
            android:textSize="28dp"
            app:layout_constraintTop_toBottomOf="@id/checkbox_entrance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/lunch" />

        <CheckBox
            android:id="@+id/checkbox_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="28dp"
            app:layout_constraintTop_toBottomOf="@id/checkbox_lunch"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/exit" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnPick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Marcar Ponto"
        android:layout_marginTop="28dp"
        android:backgroundTint="#FF9800"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_option"
        android:contentDescription="@string/cd_btn_pick_point"
        />

</androidx.constraintlayout.widget.ConstraintLayout>